jvimalprasathdev/src/objects/Notes__c.object
<CustomObject>
    <description>Sprint 3</description>
    <fields>
        <fullName>Comments_List__c</fullName>
        <label>Notes Type</label>
        <picklist>
            <picklistValues>
                <fullName>Called Home, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell – No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance Offer Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prequal Letter Sent (Purchase Offer Made)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – Moved to LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>sprint 3
Wipro Technologies ltd</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>sprint 3
Wipro Technologies ltd</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>NI-{00000}</displayFormat>
        <label>Notes Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>